fix: Recover abandoned replica prepares after acknowledgment and abort … [DANI-10227] (#74)
Recover abandoned replica prepares after acknowledgment and abort loss

Planned-By: codex
Implemented-By: codex

Co-authored-by: orbit[gpt-5.6-sol] <agent@orbit.invalid>